--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</ul>
 	</nav>
 	
-	<section>
+	<section class="wrapper">
 		<img src="./app/assets/images/watch01.png" alt="Apple Watch 1">
 		<h1>Believe in Technology, Make the change</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
