--- a/index.html
+++ b/index.html
@@ -17,12 +17,22 @@
 		</ul>
 	</nav>
 	
-	<section class="wrapper">
-		<img src="./app/assets/images/watch01.png" alt="Apple Watch 1">
-		<h1>Believe in Technology, Make the change</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
-		<a href="#">Buy Now with $199</a>
+	<section class="page-section--above-fold">
+	<div class="page-section-header">
+		
+		<div class="flex-row flex-row--center-content">
+			<div class="col6 page-section-header__image">
+				<img class="" src="./app/assets/images/watch01.png" alt="Apple Watch 1">
+			</div>
+			<div class="col6 page-section-header__content">
+				<h1 class="page-section-header__content-heading">Believe in Technology, Make the change</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
+				<a class="btn" href="#">Buy Now for $199</a>
+			</div>
+		</div>
+	</div>
 	</section>
+
 	<section>
 		<h2>Our Core Features</h2>
 			<div>
