--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="./app/assets/styles/styles.css">
@@ -17,24 +18,25 @@
 		</ul>
 	</nav>
 	
-	<section class="page-section--above-fold">
-	<div class="page-section-header">
-		
-		<div class="flex-row flex-row--center-content">
-			<div class="col6 page-section-header__image">
-				<img class="" src="./app/assets/images/watch01.png" alt="Apple Watch 1">
-			</div>
-			<div class="col6 page-section-header__content">
-				<h1 class="page-section-header__content-heading">Believe in Technology, Make the change</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
-				<a class="btn" href="#">Buy Now for $199</a>
+	<section class="page-section">
+		<div class="page-section__header">
+			<div class="flex-row flex-row--center-content">
+				<div class="medium-col6 page-section-header__image">
+					<img class="" src="./app/assets/images/watch01.png" alt="Apple Watch 1">
+				</div>
+				<div class="medium-col6 page-section-header__content">
+					<h1 class="page-section-header__content-heading">Believe in Technology, Make the change</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas, modi fugit in veritatis labore perferendis. Minima hic at, nostrum nihil!</p>
+					<div class="btn--center-small">
+						<a class="btn" href="#">Buy Now for $199</a>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
 	</section>
 
-	<section>
-		<h2>Our Core Features</h2>
+	<section class="page-section">
+		<h2 class="page-section__sub-header">Our Core Features</h2>
 			<div>
 				<i>?</i>
 				<h3>Smooth Touch</h3>
