fixed css errors in splash page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</nav>
 	
 	<section class="page-section">
-		<div class="page-section__header">
+		<div class="page-section-header">
 			<div class="flex-row flex-row--center-content">
 				<div class="medium-col6 page-section-header__image">
 					<img class="" src="./app/assets/images/watch01.png" alt="Apple Watch 1">
