--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 	<section class="page-section">
 	<h2 class="page-section-our-features__sub-header">Our Core Features</h2>
 		<div class="flex-row flex-row--even-spacing">
-			<div class="medium-col3">	
-				<div>
+			<div class="medium-col3 page-section-our-features__bullet-group">	
+				<div class="page-section-our-features__bullet">
 				<img src="./app/assets/icons/Clipboard.svg">
 					<h3 class="page-section-our-features__sub-section-header">Smooth Touch</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
 				</div>
-				<div>
+				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Custom.svg">
 					<h3 class="page-section-our-features__sub-section-header">Easy Pricing</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
 				</div>
-				<div>
+				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Search.svg">
 					<h3 class="page-section-our-features__sub-section-header">Stock Images</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
@@ -58,18 +58,18 @@
 			<div class="medium-col3 page-section-our-features__image">
 				<img src="./app/assets/images/watch02.png" alt=" Apple Watch 2">
 			</div>
-			<div class="medium-col3">
-				<div>
+			<div class="medium-col3 page-section-our-features__bullet-group">
+				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Clipboard.svg">
 					<h3 class="page-section-our-features__sub-section-header">Smooth Touch</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
 				</div>
-				<div>
+				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Custom.svg">
 					<h3 class="page-section-our-features__sub-section-header">Responsive Design</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
 				</div>
-				<div>
+				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Search.svg">
 					<h3 class="page-section-our-features__sub-section-header">Easy Pricing</h3>
 					<p class="page-section-our-features__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem, inventore?</p>
