tweaked our-features section (wrong branch)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Vex</title>
 	<link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,700" rel="stylesheet">
 	<link rel="stylesheet" href="./app/assets/styles/styles.css">
 </head>
@@ -58,7 +58,7 @@
 			<div class="medium-col3 page-section-our-features__image">
 				<img src="./app/assets/images/watch02.png" alt=" Apple Watch 2">
 			</div>
-			<div class="medium-col3 page-section-our-features__bullet-group">
+		<div class="medium-col3 page-section-our-features__bullet-group">
 				<div class="page-section-our-features__bullet">
 					<img src="./app/assets/icons/Clipboard.svg">
 					<h3 class="page-section-our-features__sub-section-header">Smooth Touch</h3>
