--- a/index.html
+++ b/index.html
@@ -77,12 +77,21 @@
 			</div>
 		</div>
 	</section>
-	<section>
-		<img src="./app/assets/images/watch01.png" alt="Apple Watch 1">
-		<h2>Designed By Professional, The Benefit For Creative Gigs</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vel labore, deleniti minima nisi, velit atque quaerat impedit ea maxime sunt accusamus at obcaecati dolor iure iusto omnis quis eum.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis commodi odit, illo, qui aliquam dol</p>
+	<section class="page-section page-section-professional-design">
+		<div class="flex-row page-section-professional-design__small-container">
+			<div class="medium-col6 page-section-professional-design__image-container">
+				<img class="" src="./app/assets/images/watch01.png" alt="Apple Watch 1">
+			</div>
+			<div class="medium-col6 page-section-professional-design__content-container">
+				<div>
+					<h2>Designed By Professionals</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vel labore, deleniti minima nisi, velit atque quaerat impedit ea maxime sunt accusamus at obcaecati dolor iure iusto omnis quis eum.
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis commodi odit, illo, qui aliquam dol</p>
+				</div>
+			</div>
+		</div>
 	</section>
+
 	<section>
 		<h2>Why Choose Apple Watch</h2>
 		<div>
