updates to choose-apple-watch section

--- a/index.html
+++ b/index.html
@@ -92,59 +92,75 @@
 		</div>
 	</section>
 
-	<section>
-		<h2>Why Choose Apple Watch</h2>
-		<div>
-			<img src="./app/assets/images/watch03.png" alt="Apple Watch 3">
-			<h3>Lorem Ipsum Dolor Sit Amet.</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, sed, assumenda. Tenetur sed esse, voluptas voluptate est veniam numquam, quis magni. Architecto minus suscipit quas, quo harum deserunt consequatur cumque!</p>
-			<a href="#">Check Features</a>
+	<section class="page-section">
+		<h2 class="page-section-choose-apple-watch__header">Why Choose Apple Watch</h2>
+		<div class="page-section-choose-apple-watch__product-container">
+			<div class="flex-row">
+				<div class="medium-col6 page-section-choose-apple-watch__image-container">
+					<img src="./app/assets/images/watch03.png" alt="Apple Watch 3">
+				</div>
+				<div class="medium-col6 page-section-choose-apple-watch__content-container">
+					<div>
+						<h3>Lorem Ipsum Dolor Sit Amet.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, sed, assumenda. Tenetur sed esse, voluptas voluptate est veniam numquam, quis magni. Architecto minus suscipit quas, quo harum deserunt consequatur cumque!</p>
+						<a class="btn" href="#">Check Features</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div>
-			<img src="./app/assets/images/watch04.png" alt="Apple Watch 4">
-			<h3>Lorem Ipsum Dolor Sit Amet.</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, sed, assumenda. Tenetur sed esse, voluptas voluptate est veniam numquam, quis magni. Architecto minus suscipit quas, quo harum deserunt consequatur cumque!</p>
-			<a href="#">Check Features</a>
+		<div class="page-section-choose-apple-watch__product-container">
+			<div class="flex-row">
+				<div class="medium-col6 page-section-choose-apple-watch__content-container">
+					<div class="page-section-choose-apple-watch__content-container--align-right">
+						<a class="btn" href="#">Check Features</a>
+						<h3>Lorem Ipsum Dolor Sit Amet.</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, sed, assumenda. Tenetur sed esse, voluptas voluptate est veniam numquam, quis magni. Architecto minus suscipit quas, quo harum deserunt consequatur cumque!</p>
+					</div>
+				</div>
+				<div class="medium-col6 page-section-choose-apple-watch__image-container">
+					<img src="./app/assets/images/watch04.png" alt="Apple Watch 4">
+				</div>
+			</div>
 		</div>
 	</section>
 	<section>
-		<h2>Check Out Some Amazing Shots</h2>
+			<h2>Check Out Some Amazing Shots</h2>
+			<div>
+				<img src="./app/assets/images/watch03.png" alt="Apple Watch 3">
+				<img src="./app/assets/images/watch04.png" alt="Apple Watch 4">
+				<img src="./app/assets/images/watch05.png" alt="Apple Watch 5">
+				<img src="./app/assets/images/watch06.png" alt="Apple Watch 6">
+			</div>
+		</section>
+		<section class="page-section">
+			<h2>Get Product Updates</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, temporibus, incidunt.</p>
+			<input type="text">
+			<button>Subscribe</button>
+		</section>
+		<section>
 		<div>
-			<img src="./app/assets/images/watch03.png" alt="Apple Watch 3">
-			<img src="./app/assets/images/watch04.png" alt="Apple Watch 4">
-			<img src="./app/assets/images/watch05.png" alt="Apple Watch 5">
-			<img src="./app/assets/images/watch06.png" alt="Apple Watch 6">
+			<h2>Watch Review</h2>
+			<i>?</i>
+			<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+			<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
+			<p>Ceo, Themefisher</p>
 		</div>
-	</section>
-	<section>
-		<h2>Get Product Updates</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, temporibus, incidunt.</p>
-		<input type="text">
-		<button>Subscribe</button>
-	</section>
-	<section>
-	<div>
-		<h2>Watch Review</h2>
-		<i>?</i>
-		<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
-		<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
-		<p>Ceo, Themefisher</p>
-	</div>
-	<div>
-		<h2>Watch Review</h2>
-		<i>?</i>
-		<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
-		<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
-		<p>Ceo, Themefisher</p>
-	</div>
-	<div>
-		<h2>Watch Review</h2>
-		<i>?</i>
-		<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
-		<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
-		<p>Ceo, Themefisher</p>
-	</div>
-	<a href="#">Buy Now With $199</a>
+		<div>
+			<h2>Watch Review</h2>
+			<i>?</i>
+			<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+			<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
+			<p>Ceo, Themefisher</p>
+		</div>
+		<div>
+			<h2>Watch Review</h2>
+			<i>?</i>
+			<p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, so absorbed in the exquisite sense of mere tranquil existence, that I neglect my talents.</p>
+			<img src="./app/assets/images/jonathon.png" alt="Jonath Andrew">
+			<p>Ceo, Themefisher</p>
+		</div>
+		<a href="#">Buy Now With $199</a>
 	</section>
 	
 	<footer>
