completed amazing shots section in css

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 			</div>
 		</div>
 	</section>
-	<section>
-			<h2>Check Out Some Amazing Shots</h2>
-			<div>
-				<img src="./app/assets/images/watch03.png" alt="Apple Watch 3">
-				<img src="./app/assets/images/watch04.png" alt="Apple Watch 4">
+	<section class="page-section-amazing-shots">
+			<h2 class=page-section-amazing-shots__header>Check Out Some Amazing Shots</h2>
+			<div class="flex-row flex-row--even-spacing">
+				<img src="./app/assets/images/watch07.png" alt="Apple Watch 7">
+				<img src="./app/assets/images/watch08.png" alt="Apple Watch 8">
 				<img src="./app/assets/images/watch05.png" alt="Apple Watch 5">
 				<img src="./app/assets/images/watch06.png" alt="Apple Watch 6">
 			</div>
